<resources>
    <string name="app_name">Found Dog</string>

    <!--    login / register -->
    <string name="edt_email">Email</string>
    <string name="edt_pwd">Password</string>
    <string name="edt_pwd2">Confirm Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_submit">SUBMIT</string>

    <!--    upload-->
    <string name="btn_upload">UPLOAD</string>

    <!--    bottom navigation -->
    <string name="menu_home">Home</string>
    <string name="menu_found_lost">Found/Lost</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_setting">Setting</string>
    <string name="tab_lost">찾고있어요</string>
    <string name="tab_found">발견했어요</string>

    <!--    error message-->
    <string name="error_fill_title">title을 입력하세요.</string>
    <string name="error_fill_content">content을 입력하세요.</string>
    <string name="error_fill_image">image을 입력하세요.</string>

</resources>