<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_found_lost"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_pet"
        android:title="@string/menu_foun_lost" />
    <item
        android:id="@+id/menu_chatting"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chat" />
    <item
        android:id="@+id/menu_alarm"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_alarm"
        android:title="@string/menu_alarm" />
    <item
        android:id="@+id/menu_setting"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_setting" />
</menu>