<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edt_margin_left_right"
        android:layout_marginRight="@dimen/edt_margin_left_right"
        android:layout_marginBottom="@dimen/edt_margin_top_bottom">
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edt_margin_left_right"
        android:layout_marginRight="@dimen/edt_margin_left_right"
        android:layout_marginTop="@dimen/edt_margin_top_bottom"
        android:layout_marginBottom="@dimen/btn_edt_margin">
        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/edt_pwd"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginLeft="@dimen/btn_margin_left_right"
        android:layout_marginRight="@dimen/btn_margin_left_right"
        android:layout_marginBottom="@dimen/btn_margin_top_bottom"
        android:layout_marginTop="@dimen/btn_edt_margin"
        android:text="@string/btn_login"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginLeft="@dimen/btn_margin_left_right"
        android:layout_marginRight="@dimen/btn_margin_left_right"
        android:layout_marginTop="@dimen/btn_margin_top_bottom"
        android:text="@string/btn_register"/>

</LinearLayout>